--- a/src/main.tex
+++ b/src/main.tex
@@ -15,6 +15,7 @@
     \input{sections/01_Introduction.tex}
     \input{sections/02_Schroedinger_Equation.tex}
     \input{sections/03_Formalism.tex}
+    \input{sections/04_Atoms_Solids.tex}
     \newpage
     \input{sections/Appendix.tex}
     \newpage
