--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -716,7 +716,7 @@ Similar to the earth having an angular momentum w.r.t.\ the sun but also itself,
 
 \ptitle{Operators}
 
-$\widehat{\mathbf{S}}$ follows the same rules as $\widehat{\mathbf{L}}$ (see appendix\ \ref{comm_am_sp})
+$\widehat{\mathbf{S}}$ follows the same rules as $\widehat{\mathbf{L}}$ (see appendix\ \ref{comm})
 
 \ptitle{Remarks}
 
@@ -843,505 +843,3 @@ and are in z-axis basis given by the \textbf{non-hermitian} matrices
                                            1 & 0
                                        \end{bmatrix}
 \end{align*}
-
-\section{Multi-Particle Systems, Atoms, Solids}
-\subsection{Two-Particle Systems}
-\subsubsection{Properties Two-Particle Systems}
-Again, we assume that $V$ is time-independent.
-
-\newpar{}
-\ptitle{Similarities to One-Particle Systems}
-
-\begin{itemize}
-    \item $\Psi$ describes system
-    \item time dependence: TDSE
-    \item total energy: TISE
-    \item $\Psi_{gen}=\sum_{n} c_{n} \Psi_{n} \exp\left[\frac{-i E_{n} t}{\hbar}\right]$
-\end{itemize}
-
-\newpar{}
-\ptitle{Differences to One-Particle Systems}
-\begin{itemize}
-    \item $\Psi(\mathbf{r_1},\mathbf{r_2},t)$ is a function of position of both particles
-    \item $\widehat{H}$ is given by
-          \begin{equation*}
-              \widehat{H}=-\frac{\hbar^{2}}{2m_{1}}\nabla_{1}^{2}-\frac{\hbar^{2}}{2m_{2}}\nabla_{2}^{2}+V(\mathbf{r}_{1},\mathbf{r}_{2},t)
-          \end{equation*}
-          where $V$ includes any interactions between particles i.e.:
-          \begin{enumerate}
-              \item interactions between  electrons
-              \item interactions of electrons with the nucleus
-          \end{enumerate}
-    \item The term
-          \begin{equation*}
-              |\Psi(\mathbf{r}_{1},\mathbf{r}_{2},t)|^{2} d^{3}\mathbf{r}_{1} d^{3}\mathbf{r}_{2}
-          \end{equation*}
-          describes the probability of finding particle 1 in volume $d^{3}\mathbf{r}_{1}$, particle 2 in volume $d^{3}\mathbf{r}_{2}$
-\end{itemize}
-
-\subsubsection{Z-Particle Systems}
-In a general multi-particle system (e.g.\ atom with $Z$ protons) the Hamiltonian is given by
-\begin{align*}
-    \widehat{H} = & \underbrace{\sum_{j=1}^{Z}\left\{-\frac{\hbar^{2}}{2m}\nabla_{j}^{2}-\left(\frac{1}{4\pi \epsilon_{0}}\right)\frac{Ze^{2}}{r_{j}}\right\}}_{T\text{ and interaction with nucleus}} \\
-    +             & \underbrace{\frac{1}{2}\left(\frac{1}{4\pi \epsilon_{0}}\right)\sum_{j\neq k}^{Z}\frac{e^{2}}{\left|\mathbf{r}_{j}-\mathbf{r}_{k}\right|}}_{\text{repulsive int.\ of electrons}}
-\end{align*}
-where in the ``repulsion'' term
-\begin{itemize}
-    \item the interaction between electrons $j,k$ is described
-    \item $\frac{1}{2}$ avoids double counting due to permuting $j,k$
-\end{itemize}
-The ``repulsion'' term makes exact solving of the TISE, in general, impossible. An approximation and an exception are presented hereafter.
-
-\subsubsection{Reduceable Two-Particle Problems}
-In two special cases the TISE of two-particle systems can be solved analytically.
-
-\newpar{}
-\ptitle{1. Noninteracting Particles}
-
-\begin{itemize}
-    \item Corresponds to ignoring the ``repulsion'' term in $\widehat{H}$ of the Z-particle system
-    \item Assume e.g.\ electrons only interact with nucleus but not each other (simplest but most inaccurate approximation)
-    \item Each electron in single particle hydrogenic state: $\psi_{n,l,m_l,m_s}$
-    \item See~\ref{ssec:NIP} for details
-\end{itemize}
-
-\newpar{}
-\ptitle{2. Central Potential Systems}
-
-Given a system where the particles interact only with each other via a potential that depends on their separation
-\begin{equation*}
-    V(\mathbf{r}_1,\mathbf{r}_2)\to V(|\mathbf{r}_1-\mathbf{r}_2|)
-\end{equation*}
-we can solve the two-particle TISE analytically by splitting the problem into center-of-mass motion
-\begin{align*}
-    \mathbf{R}\equiv\  & \frac{m_1\mathbf{r_1}+m_2\mathbf{r_2}}{m_1+m_2} &  & \text{ center of mass} \\
-    M\equiv\           & m_1 + m_2                                       &  & \text{ total mass}
-\end{align*}
-and relative motion of the two particles
-\begin{align*}
-    \mathbf{r}\equiv\  & \mathbf{r_1}-\mathbf{r_2} &                      \\
-    m_r\equiv\         & \frac{m_1 m_2}{m_1+m_2}   & \text{ reduced mass}
-\end{align*}
-In this case, the TISE separates to
-\begin{equation*}
-    -\frac{\hbar^{2}}{2M}\nabla_{\mathbf{R}}^{2}\psi-\frac{\hbar^{2}}{2m_r}\nabla_{\mathbf{r}}^{2}\psi+V(\mathbf{r})\psi=E\psi
-\end{equation*}
-and we can find a solution
-\begin{equation*}
-    \psi = \psi_\mathbf{R}(\mathbf{R})\cdot\psi_\mathbf{r}(\mathbf{r})
-\end{equation*}
-Remarks:
-\begin{itemize}
-    \item Works only for 2-particle system
-    \item For the H-atom we calculated $\psi_\mathbf{r}(\mathbf{r})$ and assumed $m_r\approx m_e$ (plug it into $m_r$ to see why)
-\end{itemize}
-
-\subsubsection{Noninteracting Particles}\label{ssec:NIP}
-As a coarse approximation we \textbf{ignore the ``repulsion'' term} from the n-particle TISE to neglect all electron-electron interactions. Then, for two given single-particle solutions $\psi_a$ and $\psi_b$ one differenciates between the following two cases.
-
-\newpar{}
-\ptitle{Distinguishable Particles}
-
-The overall solutions are products
-\begin{equation*}
-    \psi(\mathbf{r}_{1},\mathbf{r}_{2})=\psi_{a}(\mathbf{r}_{1})\psi_{b}(\mathbf{r}_{2})
-\end{equation*}
-or
-\begin{equation*}
-    \psi(\mathbf{r}_{1},\mathbf{r}_{2})=\psi_{b}(\mathbf{r}_{1})\psi_{a}(\mathbf{r}_{2})
-\end{equation*}
-where
-\begin{itemize}
-    \item $\psi(\mathbf{r}_{1},\mathbf{r}_{2})$ is the overall, 2-particle wave function
-    \item $\psi_{a}(\mathbf{r}_{1})$ means particle $1$ is in state $\psi_{a}$ etc.
-\end{itemize}
-
-\newpar{}
-\ptitle{Indistinguishable Particles}
-
-For the case of e.g.\ two electrons (which are indistinguishable) the overall 2-particle wave function is a \textbf{linear combination} of the aforementioned products:
-
-\begin{equation*}
-    \psi_{+}(\mathbf{r}_{1},\mathbf{r}_{2})=C\left[\psi_{a}(\mathbf{r}_{1})\psi_{b}(\mathbf{r}_{2})+\psi_{b}(\mathbf{r}_{1})\psi_{a}(\mathbf{r}_{2})\right]\quad \mathrm{symmetric}
-\end{equation*}
-or
-\begin{equation*}
-    \psi_{-}(\mathbf{r}_{1},\mathbf{r}_{2})=C\left[\psi_{a}(\mathbf{r}_{1})\psi_{b}(\mathbf{r}_{2})-\psi_{b}(\mathbf{r}_{1})\psi_{a}(\mathbf{r}_{2})\right]\quad \mathrm{antisymm.}
-\end{equation*}
-Remarks
-\begin{itemize}
-    \item Indistinguishable means that there is no way to  tell the two particles apart
-    \item $\psi_{+}$ stays exactly the same when swapping $\mathbf{r_1},\mathbf{r_2}$
-    \item $\psi_{-}$ changes sign when swapping $\mathbf{r_1},\mathbf{r_2}$
-    \item Implications of these two solutions are presented subsequently
-\end{itemize}
-
-\paragraph[Exchange Symmetry of psi]{Exchange Symmetry of $\psi_{\pm}$}
-
-\ptitle{Exchange Operator}
-
-The exchange operator swaps two particles
-\begin{equation*}
-    \widehat{P}\psi(\mathbf{r_1},\mathbf{r_2})=\psi(\mathbf{r_2},\mathbf{r_1})
-\end{equation*}
-For two identical particles one has
-\begin{align*}
-    m_1=        & m_2        \\
-    V(r_1,r_2)= & V(r_2,r_1)
-\end{align*}
-which means
-\begin{equation*}
-    \left[\widehat{P},\widehat{H}\right]=0
-\end{equation*}
-which by the generalized Ehrenfest theorem implies
-
-\begin{equation*}
-    \frac{d}{dt}\langle\widehat{P}\rangle=0
-\end{equation*}
-and means that $\widehat{P}$ and $\widehat{H}$ share the eigenfunctions $\psi_{\pm}$.
-
-\ptitle{Exchange Symmetry of Noninteracting Particles}
-
-One has that
-\begin{itemize}
-    \item $\psi_{+}$ is symmetric w.r.t.\ exchange (eigenvalue $+1$)
-    \item $\psi_{-}$ is antisymmetric w.r.t.\ exchange (eigenvalue $-1$)
-    \item $\psi_{\pm}$ are stationary states
-    \item As $P$ is a conserved quantity a particle,\newline once (anti)symmetric w.r.t.\ exchange,\newline stays (anti)symmetric
-\end{itemize}
-For two \textbf{distinguishable} particles one finds that
-\begin{equation*}
-    \left\langle{\left(x_{1}-x_{2}\right)}^{2}\right\rangle_{d}=\left\langle x^{2}\right\rangle_{a}+\left\langle x^{2}\right\rangle_{b}-2\left\langle x\right\rangle_{a}\left\langle x\right\rangle_{b}
-\end{equation*}
-For two \textbf{undistinguishable} particles one has
-\begin{align*}
-    \left\langle{\left(x_{1}-x_{2}\right)}^{2}\right\rangle_{\pm}= & \left\langle x^{2}\right\rangle_{a}+\left\langle x^{2}\right\rangle_{b}-2\langle x\rangle_{a}\langle x\rangle_{b}\mp2|\langle x\rangle_{ab}|^{2} \\
-                                                                   & =\left\langle{\left(\Delta x\right)}^{2}\right\rangle_{d}\mp2\left|\left\langle x\right\rangle_{ab}\right|^{2}
-\end{align*}
-Therefore, particles that are in state $\psi_{+}$ (symmetric w.r.t.\ exchange) tend to be closer together than particles that are in state $\psi_{-}$.\\
-\textbf{Remarks}
-\begin{itemize}
-    \item $\left\langle\cdot\right\rangle_{d/\pm}$ is the expectationvalue in a distinguishable/indistinguishable state
-    \item This phenomenon is often called ``exchange interaction'' or ``exchange force''
-    \item Exchange symmetry or the overall 2-particle wave function influences location of particles w.r.t.\ each other
-\end{itemize}
-
-\paragraph{Bosons and Fermions}
-\begin{itemize}
-    \item \textbf{Bosons} (e.g.\ photons (s=1), gravitons (s=2)) are particles with \textbf{integer} spin
-    \item \textbf{Fermions} (e.g.\ electrons, protons, neutrons (s=$\frac{1}{2}$)) are particles with \textbf{half-integer} spin
-\end{itemize}
-As bosons are indistinguishable (same holds for fermions) their overall wave functions behave according to the previously stated rules.
-
-\ptitle{Exchange Symmetry Axiom}
-
-The exchange symmetry of the overall wave function of
-\begin{itemize}
-    \item identical \textbf{bosons is symmetric} w.r.t.\ exchange
-    \item identical \textbf{fermions is antisymmetric} w.r.t.\ exchange
-\end{itemize}
-
-\ptitle{Exchange Symmetry of Hydrogen}
-
-Because electrons are fermions one
-\begin{itemize}
-    \item would intuitively choose $\psi_{-}$ as an overall wave function.
-    \item must choose $\psi_{+}$ because $\psi_{-}$ would mean antibonding in $\mathrm{H}_2$.
-\end{itemize}
-One finds that spin also influences the overall wave function according to
-\begin{equation*}
-    \psi(\mathbf{r_1},\mathbf{r_2})=\psi(\mathbf{r})\chi(s)
-\end{equation*}
-and one has for $\chi(s)$ and two identical spins $s=\frac{1}{2}$ the spin states
-\begin{align*}
-     & \begin{rcases}
-           \uparrow \uparrow                                                        \\
-           \downarrow \downarrow                                                    \\
-           \frac{1}{\sqrt{2}}\left(\uparrow \downarrow + \downarrow \uparrow\right) \\
-       \end{rcases} \chi_{\mathrm{triplet}}(s)\text{: symmetric w.r.t.\ ex.} \\
-     & \begin{rcases}
-           \frac{1}{\sqrt{2}}\left(\uparrow \downarrow - \downarrow \uparrow\right)
-       \end{rcases} \chi_{\mathrm{singlet}}(s) \text{: antisymmetric w.r.t.\ ex.}
-\end{align*}
-which implies that the overall wave function $\psi(\mathbf{r_1},\mathbf{r_2})=\psi(\mathbf{r})\chi(s)$ of hydrogen becomes
-\begin{equation*}
-    \psi_{+}\cdot \chi_{\mathrm{singlet}}(s)
-\end{equation*}
-to achieve a stable chemical bond.
-
-\newpar{}
-\textbf{Remarks}
-\begin{itemize}
-    \item $\psi_{-}\cdot \left(\text{triplet}\right)$ would also lead to antisymmetric $\psi(\mathbf{r_1},\mathbf{r_2})$ but is higher in energy because of antibonding.
-\end{itemize}
-
-\newpar{}
-\ptitle{Pauli Exclusion Principle}
-
-One cannot have two electrons in exactly the same state (same quantum numbers) and still have the system antisymmetric w.r.t.\ exchange because one then has $\psi_{-}=0$ i.e.\ there is no such state (Choose $\psi_{-}$ because electrons are fermions).
-
-\subsection{Atoms}
-\subsubsection{Hydrogen Orbitals}
-\paragraph{Orbital Description by Quantum Numbers (QN)}
-\renewcommand{\arraystretch}{1.1}
-\setlength{\oldtabcolsep}{\tabcolsep}\setlength\tabcolsep{3pt}
-{\small     % Smaller font
-    \begin{tabularx}{\linewidth}{@{}llll@{}}
-              & Name         & Range/Letter                                      & Meaning             \\
-        $n$   & principal QN & $0/K,\:1/L,\:2/M\:,3/N,\dots$                     & shell (radius)      \\
-        $l$   & azimuthal QN & $0/s,\:1/p,\:2/d\:,3/f,\dots$                     & subshell            \\
-              &              &                                                   & (orbital shape)     \\
-        $m_l$ & magnetic QN  & $-l,-l+1,\dots,l-1,l$                             & orbital orientation \\
-              &              &                                                   & \# of orientations  \\
-        $m_s$ & spin QN      & $+\frac{1}{2}/\uparrow,\:-\frac{1}{2}/\downarrow$ & spin orientation    \\
-              &              &                                                   & (w.r.t.\ z-axis)    \\
-        $s$   & spin         & fermions: half-int                                &                     \\
-              &              & bosons: int                                       &
-    \end{tabularx}
-}           % End smaller font
-\renewcommand{\arraystretch}{1}
-\setlength{\tabcolsep}{\oldtabcolsep}
-
-\ptitle{Visualization}
-
-\begin{center}
-    \includegraphics[width = 0.75\linewidth]{shell_subshell_orbital.png}
-\end{center}
-\textit{source: chemistry stack exchange}
-\begin{center}
-    \includegraphics[width = 0.99\linewidth]{orbitals.png}
-\end{center}
-
-\ptitle{Remarks}
-
-\begin{itemize}
-    \item One sometimes also calls orbitals
-    \begin{itemize}
-        \item by their azimuthal QN, e.g.\ for $l=1$: ``p-orbitals''
-        \item by their principal QN, e.g.\ for $n=2$: ``2p-orbitals''
-    \end{itemize}
-    \item Each orbital can contain \textbf{two electrons}, one with $m_s=+\frac{1}{2}$, one with $m_s=-\frac{1}{2}$ (Pauli: unique set of QN)
-    \item An s-orbital with QN $n$ has $n-1$ radial nodes
-\end{itemize}
-
-\paragraph{Orbital Table}
-\renewcommand{\arraystretch}{1.1}
-\setlength{\oldtabcolsep}{\tabcolsep}\setlength\tabcolsep{3pt}
-{\small     % Smaller font
-    \begin{tabularx}{\linewidth}{@{}llllll@{}}
-            &       &             &             & \# of electrons\dots             \\
-        $n$ & Shell & Subshell(s) & \# Orbitals & per Subshell         & per Shell \\
-        1   & K     & s           & 1           & 2                    & 2         \\
-        2   & L     & s           & 1           & 2                    & 8         \\
-            &       & p           & 3           & 6                    &           \\
-        3   & M     & s           & 1           & 2                    & 18        \\
-            &       & p           & 3           & 6                    &           \\
-            &       & d           & 5           & 10                   &           \\
-        4   & N     & s           & 1           & 2                    & 32        \\
-            &       & p           & 3           & 6                    &           \\
-            &       & d           & 5           & 10                   &           \\
-            &       & f           & 7           & 14                   &
-    \end{tabularx}
-}           % End smaller font
-\renewcommand{\arraystretch}{1}
-\setlength{\tabcolsep}{\oldtabcolsep}
-
-\ptitle{Remarks}
-
-\begin{itemize}
-    \item The total number of orbitals is the number of possible states ($n,l,m_l$) that one electron can occupy.
-    \item Including spin one can have two electrons per orbital.
-\end{itemize}
-
-\subsubsection{Filling Orbitals with Electrons}
-The hydrogenic atom model is an atom with $Z$ protons and $1$ single electron.
-\paragraph{Hydrogenic (One-Electron) Atoms}
-
-\ptitle{Energy Levels}
-
-\begin{center}
-    \includegraphics[width = 0.75\linewidth]{hydr_energy_levels.png}
-\end{center}
-\begin{itemize}
-    \item Reminder: $E_n = -\left[\frac{m}{2\hbar^2}{\left(\frac{e^2}{4\pi\epsilon_0}\right)}^2\right]\frac{1}{n^2} = \frac{E_1}{n^2}$
-    \item States are degenerate: the energy only depends on $n$, so the 2s and 2p orbitals are on same level given $n$ for an 1-electron atom!
-\end{itemize}
-
-\paragraph{Multielectron Atoms}
-
-\ptitle{Energy Levels}
-
-\begin{center}
-    \includegraphics[width = 0.6\linewidth]{multielectron_energy_levels.png}
-\end{center}
-\begin{itemize}
-    \item Example of screening: 1s and 2s electrons neutralize a part of the influence of the nucleus on the p orbitals
-          \begin{itemize}
-              \item The energy states become non-degenerate due to electron-electron interactions
-              \item s electrons are closer to nucleus: higher attraction to nucleus $\leftrightarrow$ lower in energy
-              \item p electrons are further away due to screening: lower attraction to nucleus $\leftrightarrow$ higher in energy
-          \end{itemize}
-    \item Screening results in different energies depending on location of electron i.e.\ shape of subshell
-\end{itemize}
-
-\ptitle{Filling Energy Levels with Electrons}
-
-As the shells overlap, one can not just assume that a larger $n$ yields a larger energy levels (e.g.\ $E_{4s}<E{3d}$). Therefore, one needs to follow a specific order when filling orbitals with electrons. One can either use the graphical method:
-\begin{center}
-    \includegraphics[width = 0.4\linewidth]{fill_energies_graphical.png}
-\end{center}
-\textit{source: http://hyperphysics.phy-astr.gsu.edu/}\\
-or use e dedicated periodic table. Both yield the filling order
-\begin{equation*}
-    1s^2 2s^2 2p^6 3s^2 3p^6 4s^2 3d^{10}\dots
-\end{equation*}
-
-\ptitle{Noble Gas Notation}
-
-Instead of writing all base orbitals down, even for atoms with large $Z$, one can initiate the electron configuration formula with the noble gas preceding the element in brackets.\\
-Example:\\
-\begin{equation*}
-    Fe(Z=26): 1s^2 2s^2 2p^6 3s^2 3p^6 4s^2 3d^6
-\end{equation*}
-can be rewritten as
-\begin{equation*}
-    Fe(Z=26): \left[Ar\right]4s^2 3d^6
-\end{equation*}
-
-\ptitle{Exceptions}
-
-Some elements don't follow the general rules for filling orbitals. Two important examples are
-\begin{equation*}
-    Cr: \left[Ar\right]4s^1 3d^5
-\end{equation*}
-\begin{equation*}
-    Cu: \left[Ar\right]4s^1 3d^{10}
-\end{equation*}
-which yields an energetically more optimal state.
-
-\ptitle{Valence Electrons}
-
-\begin{itemize}
-    \item The chemical reactivity strongly depends on the \# of valence electrons (outermost shell)
-    \item Noble (inert) gases have a full valence shell: don't react chemically
-\end{itemize}
-
-\subsubsection{Full-State Description of Atoms}
-
-\begin{itemize}
-    \item Full subshells give fixed contributions to the state of an atom.
-    \item Non-full subshells have freedom in how to fill their orbitals with electrons. Therefore, one needs to establish a method to describe these states and answer the question ``in what orbital and spin angular momentum states are these electrons?''
-    \item This method is especially useful when searching for the ground state of a certain atom.
-\end{itemize}
-
-\ptitle{Important Rules}
-
-\begin{enumerate}
-    \item \textbf{Filled subshells} never contribute to $L$, $S$, $J$.
-    \item One can use the \textbf{addition rule} to find all possible combination of momentum cones.
-    \item All the angular momentum quantum numbers ($l,s,\dots,L,S,\dots$) must be \textbf{multiplied by} $\boldsymbol{\hbar}$ to find the actual angular momenta.
-\end{enumerate}
-
-\paragraph{Total Momentum Quantum Numbers}
-
-\ptitle{Angular Momentum (AM) in Multiparticle Systems}
-
-One can establish a full-state description of an atom using total (orbital and spin) angular momentum. As these observables commute with $\hat{H}$ they are conserved quantities and useful for state description. For orbital angular momentum one defines
-\begin{align*}
-    L                   & \text{: total orbital AM}                \\
-    M_L=\sum_{i}m_{l,i} & \text{: total orb. AM projection on $z$} \\
-\end{align*}
-For spin one has 
-\begin{align*}
-    S                   & \text{: total spin AM}                    \\
-    M_S=\sum_{i}m_{s,i} & \text{: total spin. AM projection on $z$} \\
-\end{align*}
-and in total one has
-\begin{align*}
-    J           & \text{: total AM}                   \\
-    M_J=M_L+M_S & \text{: total AM projection on $z$} \\
-\end{align*}
-
-Remarks
-\begin{itemize}
-    \item For $M_L=0$ one also has $L=0$
-    \item For $M_S=0$ one also has $S=0$
-    \item $M_L$ relates to $L$ as $m_l$ relates to $l$ (i.e.\ $M_L$ is a projection of total angular momentum along $z$)
-    \item $M_S$ relates to $S$ as $m_s$ relates to $s$
-    \item One finds the possible values for $L,S,J$ using the addition rule.
-\end{itemize}
-
-\ptitle{Addition Rule}
-
-Given two orbital or spin angular momenta $j_1, j_2$ one has
-\begin{equation*}
-    J=(j_1+j_2),\dots,|j_1-j_2|
-\end{equation*}
-with integer steps in between.\\
-Remarks:
-\begin{itemize}
-    \item Describes combinations to fill partially-filled subshells (many possible combinations).
-    \item Arises because AM are directional and quantized.
-    \item Depending on the specific values for the $j_i$ one has half-integer, integer or multi-integer steps between possible $J$!
-    \item Given ranges for $L$ and $S$ for an atom, one can choose a specific pair $(L,S)$ and apply the addition rule to get $J$ i.e.
-          \begin{equation*}
-              J=(L+S),\dots,|L-S|
-          \end{equation*}
-    \item Remember that for electrons one always has $s=+\frac{1}{2}$ but $m_s=\pm \frac{1}{2}$
-\end{itemize}
-
-\ptitle{Term Symbol}
-
-As partially-filled subshells impose a range of possible atom states (ways to fill electrons in subshells) given by the combinations of the $L,S,J$ one defines a simplified notation given by
-\begin{equation*}
-    \prescript{2S+1}{}{X_J}
-\end{equation*}
-where one uses for $X$ the same letters as for the subshells
-\begin{equation*}
-    X=
-    \begin{cases}
-        S,     & L=0 \\
-        P,     & L=1 \\
-        D,     & L=2 \\
-        \vdots &
-    \end{cases}
-\end{equation*}
-
-Remarks
-\begin{itemize}
-    \item The superscript $2S+1$ stands for the \# of projections
-    \item The special case of $2S+1=1$ is called singlet
-    \item The special case of $2S+1=3$ is called triplet
-\end{itemize}
-
-\ptitle{Excange Symmetry}
-
-\begin{itemize}
-    \item The addition rule does not consider exchange symmetry (Pauli exclusion).
-    \item Therefore, not all states $\prescript{2S+1}{}{X_J}$ found for a certain atom are antisymmetric w.r.t.\ exchange but one needs the latter for electrons!
-    \item Some states would require 2 electrons with exactly the same quantum numbers.
-    \item There are specific rules to find these valid states (not part of this course).
-\end{itemize}
-
-\ptitle{Hund's Rules for Finding Ground States}
-
-After considering exchange symmetry, one has reduced the number of possible states. One can the apply Hund's rule to find the lowest-energy state called ``ground state''
-\begin{enumerate}
-    \item State with largest $S$ is most stable
-    \item For states with same $S$, largest $L$ is most stable
-    \item For states with same $S$ and $L$ (but different $J$)
-          \begin{itemize}
-              \item Smallest $J$ most stable for subshells that are no more than half full
-              \item Larqest $J$ most stable for subshells that are more than half full
-          \end{itemize}
-\end{enumerate}
-
-
-
-
-
-
-
-
-
-
