adding some remarks to atoms

--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -787,7 +787,7 @@ where the probability of measuring a certain spin (assuming $\left|\lambda\right
 
 \ptitle{Spin Operators as Matrices}
 
-Setting the two eigenstates of the electron as basis vectors of a \textbf{two-dimensional} vector space we get
+Setting the two eigenstates of the electron as basis vectors (the space having only 2 dimensions allows for vector notation!) of a \textbf{two-dimensional} vector space we get
 
 \begin{align*}
     \left|\frac{1}{2},\quad +\frac{1}{2}\right> & \rightarrow \left(\begin{matrix}
