--- a/src/sections/04_Atoms_Solids.tex
+++ b/src/sections/04_Atoms_Solids.tex
@@ -324,7 +324,7 @@ The hydrogenic atom model is an atom with $Z$ protons and $1$ single electron.
     \item States are degenerate: the energy only depends on $n$, so the 2s and 2p orbitals are on same level given $n$ for an 1-electron atom!
 \end{itemize}
 
-\paragraph{Multielectron Atoms}
+\paragraph{Multielectron (Non-Hydrogenic) Atoms}
 
 \ptitle{Energy Levels}
 
@@ -441,7 +441,7 @@ Remarks:
 \begin{itemize}
     \item Describes combinations to fill partially-filled subshells (many possible combinations).
     \item Arises because AM are directional and quantized.
-    \item Depending on the specific values for the $j_i$ one has half-integer, integer or multi-integer steps between possible $J$!
+    \item Depending on the specific values for the $j_i$ one has half-integer, integer or multi-integer steps between possible $J$ (Caution: often not all in-between steps are taken)!
     \item Given ranges for $L$ and $S$ for an atom, one can choose a specific pair $(L,S)$ and apply the addition rule to get $J$ i.e.
           \begin{equation*}
               J=(L+S),\dots,|L-S|
