added remarks on matrix notation

--- a/src/sections/03_Formalism.tex
+++ b/src/sections/03_Formalism.tex
@@ -26,9 +26,11 @@ These functions can be used as a complete orthonormal base (ONB) if
     c_n                     & = \langle f_n|f \rangle          &  & \text{projection on base}
 \end{align*}
 
-\textbf{Remark}
-
-Properites of the inner product can be found in Appendix\ \ref{ssec:InnerProd}
+\textbf{Remarks}
+\begin{itemize}
+    \item $\sum_{j=1}^{n} \left|f_j\right\rangle \left\langle f_j\right| = \mathbf{I}$ (Closure relation)
+    \item More properites of the inner product can be found in Appendix\ \ref{ssec:InnerProd}
+\end{itemize}
 
 \subsubsection{Properties of QM Hilbert Space}
 \begin{itemize}
