--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -50,7 +50,10 @@ $\widehat{H}$ is the Hamiltonian operator representing \textbf{total energy}:
           \noindent\begin{equation*}
               \langle Q\rangle=\int_{-\infty}^\infty\psi^*(x)\widehat{Q}\psi(x)dx
           \end{equation*}
-    \item $\widehat{H}\psi = E\psi$ is an \textit{eigenvalue equation}
+    \item $\widehat{H}\psi = E\psi$ is an \textit{eigenvalue equation}. Therefore the energies $E_n$ can be obtained with diagonalization
+    \noindent\begin{equation*}
+        \det\left(\mathbf{H}-E_n \mathbf{I}\right) = \mathbf{0} \qquad \mathbf{H}_{jk} = \left\langle f_j\right|\widehat{H}\left|f_k \right\rangle
+    \end{equation*}
     \item every expectation value is \textbf{constant in time}
 \end{itemize}
 
