--- a/src/sections/04_Atoms_Solids.tex
+++ b/src/sections/04_Atoms_Solids.tex
@@ -1,4 +1,4 @@
-\section{Multi-Particle Systems, Atoms, Solids}
+\section{Multi-Particle Systems and Atoms}
 \subsection{Two-Particle Systems}
 \subsubsection{Properties Two-Particle Systems}
 Again, we assume that $V$ is time-independent.
