--- a/src/main.tex
+++ b/src/main.tex
@@ -11,16 +11,17 @@
 \begin{multicols*}{3}
     
     % create the title section
-    %\input{\templatePath/summary_title.tex} % ChkTex 27
-    %\input{sections/01_Introduction.tex}
-    %\input{sections/02_Schroedinger_Equation.tex}
-    %\input{sections/03_Formalism.tex}
-    %\input{sections/04_Atoms_Solids.tex}
+    \input{\templatePath/summary_title.tex} % ChkTex 27
+    \input{sections/01_Introduction.tex}
+    \input{sections/02_Schroedinger_Equation.tex}
+    \input{sections/03_Formalism.tex}
+    \input{sections/04_Atoms_Solids.tex}
     \input{sections/05_Approx_Methods.tex}
     \newpage
-    %\input{sections/Appendix.tex}
+    \input{sections/Appendix.tex}
     \newpage
-    %\input{sections/midterm.tex}
+    \setcounter{section}{0}
+    \input{sections/final_cheatsheet.tex}
     
 \end{multicols*}
 \end{document}
