--- a/src/sections/05_Approx_Methods.tex
+++ b/src/sections/05_Approx_Methods.tex
@@ -112,7 +112,7 @@ Finding $E_{\pm}^{(1)}$ is equivalent to diagonalizing a degenerate block $\math
         \end{array}\right)
 \end{equation*}
 This method can be generalized to n-degenerate states where one has an $n\times n$ $\mathbf{W}$ matrix.\\
-If $W$ is diagonal
+If $\mathbf{W}$ is diagonal
 \begin{itemize}
     \item The $\psi_a^{(0)},\psi_b^{(0)},\psi_c^{(0)} \dots $ are already proper eigenstates
     \item One has for the 2-fold degenerate case
@@ -133,7 +133,7 @@ The variational principle theorem then states:
 \begin{equation*}
     E_{gs}\leq\left\langle\psi_{\mathrm{trial}}\left|\hat{H} \psi_{\mathrm{trial}}\right|\right\rangle \equiv \left<H\right>
 \end{equation*}
-The estimate for the upper bound can be optimized by inserting (possibly many) parameter into $ \psi_{\mathrm{trial}}$ and minimizing the resulting bound.
+The estimate for the upper bound can be optimized by inserting (possibly many) parameters into $ \psi_{\mathrm{trial}}$ and minimizing the resulting bound.
 
 
 \newpar{}
