--- a/src/sections/final_cheatsheet.tex
+++ b/src/sections/final_cheatsheet.tex
@@ -571,6 +571,38 @@ Particle with $0<E<V_0$. Transmission coefficient $T$:
     T\approx\frac{16E(V_0-E)}{V_0^2}\exp\Biggl[-4 \underbrace{\frac{\sqrt{2m(V_0-E)}}{\hbar}}_{k} a\Biggr]
 \end{equation*}
 
+\section{3D Schroedinger Equation}
+\subsection{Spherical Symmetry}
+\subsection{Hydrogen Atom}
+\subsection{Cubical ISW}
+
+\section{Anglar Momentum and Spin}
+\subsection{Angular Momentum}
+\subsection{Spin}
+
+\section{Multiple Particle Systems}
+\subsection{Z-particle Systems}
+\subsection{Two-Particle Systems}
+\subsubsection{Reducable Two-Particle Problems}
+\subsubsection{Noninteracting Particles}
+\subsubsection[Exchange Symmetry]{Exchange Symmetry of $\psi_\pm$}
+\subsection{Bosons and Fermions}
+
+\section{Atoms}
+\subsection{Hydrogen Orbitals}
+\subsubsection{Orbital Table}
+\subsection{Filling Orbitals with Electrons}
+\subsection{Full-State Description of Atoms}
+
+\section{Solids}
+\subsection{Free Electron Model}
+\subsubsection{k-Space}
+\subsubsection{Fermi Energy}
+\subsection{Potential Models}
+\subsubsection{Bloch's Theorem}
+\subsubsection{Periodic Boundary Conditions}
+\subsection{Energy Bands and Band Gaps}
+
 \section{Tables}
 \subsection{Useful Integrals}
 \subsubsection{Exponentials}
@@ -603,18 +635,19 @@ more on \textit{Useful Info Sheet}
     \end{align*}
 \end{footnotesize}
 
-%% not needed in Midterm %%
 
-% \subsection{Legendre Polynomials}
-% \noindent\begin{align*}
-%     P_{0} & =1                     & P_{3} & =\frac{1}{2}(5x^{3}-3x)           \\
-%     P_{1} & =x                     & P_{4} & =\frac{1}{8}(35x^{4}-30x^{2}+3)   \\
-%     P_{2} & =\frac{1}{2}(3x^{2}-1) & P_{5} & =\frac{1}{8}(63x^{5}-70x^{3}+15x)
-% \end{align*}
-% \noindent\begin{align*}
-%     P_{0}^{0} & =1                       & P_{2}^{0} & =\frac{1}{2}(3 \cos^{2}\theta-1)             \\
-%     P_{1}^{1} & =-\sin\theta             & P_{3}^{3} & =-15 \sin\theta(1-\cos^{2}\theta)            \\
-%     P_{1}^{0} & =\cos\theta              & P_{3}^{2} & =15 \sin^{2}\theta \cos\theta                \\
-%     P_{2}^{2} & =3 \sin^{2}\theta        & P_{3}^{1} & =-\frac{3}{2}\sin\theta (5 \cos^{2}\theta-1) \\
-%     P_{2}^{1} & =-3 \sin\theta\cos\theta & P_{3}^{0} & =\frac{1}{2} (5 \cos^{3}\theta-3 \cos\theta)
-% \end{align*}
+\subsection{Legendre Polynomials}
+\noindent\begin{align*}
+    P_{0} & =1                     & P_{3} & =\frac{1}{2}(5x^{3}-3x)           \\
+    P_{1} & =x                     & P_{4} & =\frac{1}{8}(35x^{4}-30x^{2}+3)   \\
+    P_{2} & =\frac{1}{2}(3x^{2}-1) & P_{5} & =\frac{1}{8}(63x^{5}-70x^{3}+15x)
+\end{align*}
+
+\subsubsection[Associated Legendre Functions]{Associated Legendre Functions for $x=\cos(\theta)$}
+\noindent\begin{align*}
+    P_{0}^{0} & =1                       & P_{2}^{0} & =\frac{1}{2}(3 \cos^{2}\theta-1)             \\
+    P_{1}^{1} & =-\sin\theta             & P_{3}^{3} & =-15 \sin\theta(1-\cos^{2}\theta)            \\
+    P_{1}^{0} & =\cos\theta              & P_{3}^{2} & =15 \sin^{2}\theta \cos\theta                \\
+    P_{2}^{2} & =3 \sin^{2}\theta        & P_{3}^{1} & =-\frac{3}{2}\sin\theta (5 \cos^{2}\theta-1) \\
+    P_{2}^{1} & =-3 \sin\theta\cos\theta & P_{3}^{0} & =\frac{1}{2} (5 \cos^{3}\theta-3 \cos\theta)
+\end{align*}
