--- a/src/sections/05_Approx_Methods.tex
+++ b/src/sections/05_Approx_Methods.tex
@@ -1,23 +1,17 @@
 \section{Approximation Methods}
 
+\ptitle{Perturbation theory}
 \begin{itemize}
-    \item Perturbation theory
-    \begin{itemize}
-        \item Attempts to solve new problems given the solution of an existing, simpler one.
-        \item Provides corrections to \textbf{all} energy levels of a certain \textbf{order}.
-    \end{itemize}
-    \item The variational principle
-    \begin{itemize}
-        \item Doesn't need previous knowledge of energies or states but, in turn, can also not use it to yield a broad range of results.
-        \item Provides an upper bound for the ground state energy (any some information on the 1st excited state) using trial functions.
-    \end{itemize}
+    \item Attempts to solve new problems given the solution of an existing, simpler one.
+    \item Provides corrections to \textbf{all} energy levels of a certain \textbf{order}.
+\end{itemize}
+\ptitle{Variational principle}
+\begin{itemize}
+    \item Doesn't need previous knowledge of energies or states but, in turn, can also not use it to yield a broad range of results.
+    \item Provides an upper bound for the ground state energy (any some information on the 1st excited state) using trial functions.
 \end{itemize}
 
 \subsection{Time-Independent Perturbation Theory}
-
-\newpar{}
-\ptitle{Problem Statement}
-
 The perturbed Hamiltonian is given by
 \begin{equation*}
     H=H^{(0)}+\lambda H^{\prime}
@@ -26,6 +20,49 @@ with an adjustable dummy parameter $\lambda$ (finally set to $1$). The perturbed
 \begin{equation*}
     H\psi_n = E_n \psi_n
 \end{equation*}
+
+\begin{examplesection}[Matrix example]
+    \noindent\begin{equation*}
+        \widehat{\mathbf{H}} = \underbrace{V_0 
+        \begin{bmatrix}
+            1&0&0\\
+            0&1&0\\
+            0&0&2
+        \end{bmatrix}}_{\mathbf{H}^(0)}
+        + \underbrace{V_0 \varepsilon
+        \begin{bmatrix}
+            -1&0&0\\
+            0&0&1\\
+            0&1&0
+        \end{bmatrix}}_{\lambda\mathbf{H}^{\prime}}
+    \end{equation*}
+
+    since $\mathbf{H}^{(0)}$ is already diagonalized
+    \noindent\begin{gather*}
+        \underbrace{\lambda_1 = \lambda_2 = V_0}_{\textsf{degenerate}},\quad \underbrace{\lambda_3 = 2V_0}_{\textsf{non-degenerate}}\\
+        \psi_1^{(0)} = \begin{bmatrix}
+            1&0&0
+        \end{bmatrix}^{\mathsf{T}},
+        \psi_2^{(0)} = \begin{bmatrix}
+            0&1&0
+        \end{bmatrix}^{\mathsf{T}},
+        \psi_3^{(0)} = \begin{bmatrix}
+            0&0&1
+        \end{bmatrix}^{\mathsf{T}}
+    \end{gather*}
+
+    \newpar{}
+    \ptitle{Non-Degenerate (3)}
+    \noindent\begin{equation*}
+        E_3 = E_3^{(0)}+E_3^{(1)}+E_3^{(2)} = V_0(2+\varepsilon^2)
+    \end{equation*}
+
+    \ptitle{Degenerate (1\&2)}
+    \noindent\begin{align*}
+            E_1 &= E_1^{(0)} + E_{-}^{(1)} = \lambda_1+ E_{-}^{(1)} \\
+            E_2 &= E_2^{(0)} + E_{+}^{(1)} = \lambda_1+ E_{+}^{(1)}
+    \end{align*}
+\end{examplesection}
 
 \subsubsection{Non-Degenerate Perturbation Theory}
 Approximating perturbation of non-degenerate states and energies can be achieved by non-degenerate perturbation theory.
@@ -42,15 +79,15 @@ Where $E_{n}^{(k)}$, $\psi_{n}^{(k)}$ are \textit{kth-order  corrections}. Rearr
 \newpar{}
 \ptitle{1st and 2nd Order Approximations}
 \begin{equation*}
-    E_{n}^{(1)}=\left\langle\psi_{n}^{(0)}\left| H^{\prime} \right|\psi_{n}^{(0)}\right\rangle
+    E_{n}^{(1)}=\left\langle\psi_{n}^{(0)}\right| H^{\prime} \left.\psi_{n}^{(0)}\right\rangle
 \end{equation*}
 
 \begin{equation*}
-    \psi_{n}^{(1)}=\sum_{m\neq n}\frac{\left\langle\psi_{m}^{(0)}\left|H^{\prime}\right|\psi_{n}^{(0)}\right\rangle}{\left(E_{n}^{(0)}-E_{m}^{(0)}\right)}\psi_{m}^{(0)}
+    \psi_{n}^{(1)}=\sum_{m\neq n}\frac{\left\langle\psi_{m}^{(0)}\right|H^{\prime}\left.\psi_{n}^{(0)}\right\rangle}{\left(E_{n}^{(0)}-E_{m}^{(0)}\right)}\psi_{m}^{(0)}
 \end{equation*}
 
 \begin{equation*}
-    E_{n}^{(2)}=\sum_{m\neq n}\frac{\left|\left\langle\psi_{m}^{(0)}\left|H^{\prime}\right|\psi_{n}^{(0)}\right\rangle\right|^{2}}{E_{n}^{(0)}-E_{m}^{(0)}}
+    E_{n}^{(2)}=\sum_{m\neq n}\frac{\left|\left\langle\psi_{m}^{(0)}\right|H^{\prime}\left.\psi_{n}^{(0)}\right\rangle\right|^{2}}{E_{n}^{(0)}-E_{m}^{(0)}}
 \end{equation*}
 
 \newpar{}
@@ -60,12 +97,12 @@ Where $E_{n}^{(k)}$, $\psi_{n}^{(k)}$ are \textit{kth-order  corrections}. Rearr
     \item The denominators in the given formulas blow up for degenerate states. Therefore, one needs to use degenerate perturbation theory for approximation of these states/energies.
 \end{itemize}
 
-\subsubsection{Non-Degenerate Perturbation Theory}
+\subsubsection{Degenerate Perturbation Theory}
 Given two degenerate unperturbed states
 \begin{align*}
     H^{(0)}\psi_a^{(0)}                                            & =E^{(0)}\psi_a^{(0)} \\
     H^{(0)}\psi_b^{(0)}                                            & =E^{(0)}\psi_b^{(0)} \\
-    \left\langle\psi_a^{(0)}\left|\psi_b^{(0)}\right|\right\rangle & =0
+    \left\langle\psi_a^{(0)}\right|\left.\psi_b^{(0)}\right\rangle & =0
 \end{align*}
 then, any linear combination of the states
 \begin{equation*}
@@ -84,7 +121,7 @@ Therefore, the approximation formulas from the previous section become ambiguous
     E_{\pm}^{(1)}=\frac{1}{2}\left[W_{aa}+W_{bb}\pm\sqrt{{(W_{aa}-W_{bb})}^{2}+4 |W_{ab}|^{2}}\right]
 \end{equation*}
 \begin{equation*}
-    W_{ij}=\left\langle\psi_{i}^{(0)} \left| H^{\prime} \right|\psi_{j}^{(0)}\right\rangle
+    W_{ij}=\left\langle\psi_{i}^{(0)} \right| H^{\prime} \left.\psi_{j}^{(0)}\right\rangle
 \end{equation*}
 This solution arises from finding a suitable basis for the degenerate states, i.e.\ the right linear combination $\psi^{(0)}=\alpha\psi_a^{(0)}+\beta\psi_b^{(0)}$ so that we can use $\psi^{(0)}$ in the formulas from the previous section. Then, the two $\psi$ are linearly independent basis vectors, such as the standard basis vectors.
 
@@ -92,6 +129,7 @@ This solution arises from finding a suitable basis for the degenerate states, i.
 \ptitle{Remarks}
 \begin{itemize}
     \item As we have degenerate states, we need two corrections (the $\pm$): one for each state's energy (eigenstate).
+    \item 
 \end{itemize}
 
 \paragraph{n-Fold Degeneracies}
@@ -117,8 +155,8 @@ If $\mathbf{W}$ is diagonal
     \item The $\psi_a^{(0)},\psi_b^{(0)},\psi_c^{(0)} \dots $ are already proper eigenstates
     \item One has for the 2-fold degenerate case
           \begin{align*}
-              E_{+}^{(1)} & =W_{aa}=\langle\Psi_{a}^{(0)}|\hat{H}^{\prime}\Psi_{a}^{(0)}\rangle \\
-              E_{-}^{(1)} & =W_{bb}=\langle\Psi_{b}^{(0)}|\hat{H}^{\prime}\Psi_{b}^{(0)}\rangle
+              E_{+}^{(1)} & =W_{aa}=\left\langle\psi_{a}^{(0)}\right|\left.\widehat{H}^{\prime}\psi_{a}^{(0)}\right\rangle \\
+              E_{-}^{(1)} & =W_{bb}=\left\langle\psi_{b}^{(0)}\right|\left.\widehat{H}^{\prime}\psi_{b}^{(0)}\right\rangle
           \end{align*}
           which is what we found for non-degenerate perturbation theory.
 \end{itemize}
@@ -127,11 +165,11 @@ If $\mathbf{W}$ is diagonal
 In contrast to perturbation theory, using the variational principle we can
 \begin{itemize}
     \item Only find an upper bound for the \textbf{ground state} energy
-    \item Not solve the TISE given $\hat{H}$
+    \item Not solve the TISE given $\widehat{H}$
 \end{itemize}
 The variational principle theorem then states:
 \begin{equation*}
-    E_{gs}\leq\left\langle\psi_{\mathrm{trial}}\left|\hat{H} \psi_{\mathrm{trial}}\right|\right\rangle \equiv \left<H\right>
+    E_{gs}\leq\left\langle\psi_{\mathrm{trial}}\right|\widehat{H} \psi_{\mathrm{trial}}\left.\right\rangle \equiv \left<H\right>
 \end{equation*}
 The estimate for the upper bound can be optimized by inserting (possibly many) parameters into $ \psi_{\mathrm{trial}}$ and minimizing the resulting bound.
 
@@ -141,18 +179,22 @@ The estimate for the upper bound can be optimized by inserting (possibly many) p
 
 In a \textit{quartic oscillator} one has
 \begin{equation*}
-    \hat{H}=\frac{-\hbar^{2}}{2m}\frac{d^{2}}{dx^{2}}+Cx^{4}
+    \widehat{H}=\frac{-\hbar^{2}}{2m}\frac{d^{2}}{dx^{2}}+Cx^{4}
 \end{equation*}
 A common trial function is a Gaussian curve
 \begin{equation*}
     \Psi_{\mathrm{trial}}={\left(\frac{\alpha}{\pi}\right)}^{1/4}\exp\left[-\alpha x^{2}/2\right]
 \end{equation*}
-with
+resulting in
 \begin{equation*}
-    \left<H\right>=\frac{\hbar^2\alpha}{4m}
+    \left\langle H\right\rangle=\frac{\hbar^2\alpha}{4m}+\frac{3c}{4\alpha^2}
 \end{equation*}
-one then gets 
+
+Minimizing the expecation value
+\noindent\begin{equation*}
+    \frac{d}{d \alpha} \left\langle H\right\rangle=0
+\end{equation*}
+yields 
 \begin{equation*}
-    E_{gs}\leq\frac{\hbar^2\alpha}{4m}+\frac{3c}{4\alpha^2}
+    E_{gs}\leq \frac{3}{8}{\left(\frac{6c\hbar^4}{m^2}\right)}^{\frac{1}{3}}, \quad\mathrm{with}\; \alpha_{\min} = {\left(\frac{6mc}{\hbar^2}\right)}^{\frac{1}{3}}
 \end{equation*}
-which can be minimized using $\frac{\partial}{\partial \alpha}$. The resulting value for $\alpha$ can then be inserted into $E_{gs}$ to find a small upper bound (but not the supremum) for the ground-state energy.
